Fix some minor layout issues.

--- a/cartridge/shop/static/css/cartridge.css
+++ b/cartridge/shop/static/css/cartridge.css
@@ -65,7 +65,7 @@
     margin: 0 0 5px 5px;
 }
 .cart-form .quantity input {
-    width: 25px;
+    width: 40px;
     text-align: center;
     margin: 0;
 }
